feat: add get-all/get-by-rarity handlers
