# docs/swagger.yaml
@@ -1,11 +1,11 @@
 basePath: /api/v1
 definitions:
-  models.AccessTokenResponse:
+  data.AccessTokenResponse:
     properties:
       access_token:
         type: string
     type: object
-  models.AccountVerificationRequest:
+  data.AccountVerificationRequest:
     properties:
       code:
         example: "12345"
@@ -13,7 +13,7 @@ definitions:
     required:
     - code
     type: object
-  models.ChangePasswordRequest:
+  data.ChangePasswordRequest:
     properties:
       new_password:
         example: re41h0k4ge
@@ -27,7 +27,30 @@ definitions:
     - new_password
     - old_password
     type: object
-  models.CreateManufacturerRequest:
+  data.CreateCardRequest:
+    properties:
+      character_name:
+        example: Hatake Kakashi
+        maxLength: 64
+        minLength: 2
+        type: string
+      image_url:
+        example: https://example.com/image.jpg
+        type: string
+      rarity:
+        example: SSR
+        maxLength: 12
+        type: string
+      serial_number:
+        example: SE-014
+        maxLength: 64
+        minLength: 1
+        type: string
+    required:
+    - rarity
+    - serial_number
+    type: object
+  data.CreateManufacturerRequest:
     properties:
       description_eng:
         example: Chinese manufacturer that is popular for Naruto collection cards
@@ -47,7 +70,25 @@ definitions:
     required:
     - original_title
     type: object
-  models.GetManufacturerResponse:
+  data.GetCardResponse:
+    properties:
+      character_name:
+        example: Hatake Kakashi
+        type: string
+      id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      image_url:
+        example: https://example.com/image.jpg
+        type: string
+      rarity:
+        example: SSR
+        type: string
+      serial_number:
+        example: SE-014
+        type: string
+    type: object
+  data.GetManufacturerResponse:
     properties:
       description_eng:
         example: Chinese manufacturer that is popular for Naruto collection cards
@@ -66,7 +107,7 @@ definitions:
         example: Kayou
         type: string
     type: object
-  models.GetUserResponse:
+  data.GetUserResponse:
     properties:
       email:
         example: realhokage@gmail.com
@@ -86,7 +127,17 @@ definitions:
         example: true
         type: boolean
     type: object
-  models.PasswordResetRequest:
+  data.HealthCheckResponse:
+    properties:
+      status:
+        allOf:
+        - $ref: '#/definitions/types.HealthCheckStatus'
+        example: ok
+      version:
+        example: 1.0.0
+        type: string
+    type: object
+  data.PasswordResetRequest:
     properties:
       code:
         example: "123456"
@@ -103,7 +154,7 @@ definitions:
     - email
     - new_password
     type: object
-  models.SendPasswordResetEmailRequest:
+  data.SendPasswordResetEmailRequest:
     properties:
       email:
         example: re4lhok5ge@gmail.com
@@ -111,7 +162,7 @@ definitions:
     required:
     - email
     type: object
-  models.SignInRequest:
+  data.SignInRequest:
     properties:
       email:
         example: realnaruto@gmail.com
@@ -124,7 +175,7 @@ definitions:
     - email
     - password
     type: object
-  models.SignUpRequest:
+  data.SignUpRequest:
     properties:
       email:
         example: realnaruto@gmail.com
@@ -141,7 +192,7 @@ definitions:
     - password
     - username
     type: object
-  models.UpdateManufacturerRequest:
+  data.UpdateManufacturerRequest:
     properties:
       description_eng:
         example: Chinese manufacturer that is popular for Naruto collection cards
@@ -159,7 +210,7 @@ definitions:
         minLength: 4
         type: string
     type: object
-  models.UpdateUserRequest:
+  data.UpdateUserRequest:
     properties:
       email:
         example: realhokage@gmail.com
@@ -193,6 +244,12 @@ definitions:
         description: messsage describing an error
         type: string
     type: object
+  types.HealthCheckStatus:
+    enum:
+    - ok
+    type: string
+    x-enum-varnames:
+    - HEALTH_CHECK_STATUS_OK
   types.SuccessResponse:
     properties:
       data: {}
@@ -234,7 +291,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.AccessTokenResponse'
+                  $ref: '#/definitions/data.AccessTokenResponse'
               type: object
         "400":
           description: Incorrect OAuth state; OAuth exchange error; OAuth user fetching
@@ -271,7 +328,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.SignInRequest'
+          $ref: '#/definitions/data.SignInRequest'
       produces:
       - application/json
       responses:
@@ -282,7 +339,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.AccessTokenResponse'
+                  $ref: '#/definitions/data.AccessTokenResponse'
               type: object
         "400":
           description: Unexpected database error; Incorrect password;
@@ -330,7 +387,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.AccessTokenResponse'
+                  $ref: '#/definitions/data.AccessTokenResponse'
               type: object
         "400":
           description: Unexpected database error
@@ -359,7 +416,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.SignUpRequest'
+          $ref: '#/definitions/data.SignUpRequest'
       produces:
       - application/json
       responses:
@@ -370,7 +427,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.GetUserResponse'
+                  $ref: '#/definitions/data.GetUserResponse'
               type: object
         "400":
           description: Password hashing error; Unexpected database error;
@@ -387,6 +444,65 @@ paths:
       summary: Sign up
       tags:
       - auth
+  /cards:
+    get:
+      description: Helps to retrieve a list of all cards
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/types.SuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/data.GetCardResponse'
+                  type: array
+              type: object
+        "500":
+          description: Unexpected database error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      summary: Get all cards
+      tags:
+      - cards
+    post:
+      consumes:
+      - application/json
+      description: Helps to create a new card
+      parameters:
+      - description: create card body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/data.CreateCardRequest'
+      produces:
+      - application/json
+      responses:
+        "401":
+          description: User is not logged in
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "403":
+          description: Action is forbidden for user of this role
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "422":
+          description: Validation error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+        "500":
+          description: Unexpected database error
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a card
+      tags:
+      - cards
   /healthcheck:
     get:
       description: Serves as route to check if server is up and running
@@ -396,7 +512,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.SuccessResponse'
+            allOf:
+            - $ref: '#/definitions/types.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/data.HealthCheckResponse'
+              type: object
         "500":
           description: Server is not available
           schema:
@@ -418,7 +539,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/models.GetManufacturerResponse'
+                    $ref: '#/definitions/data.GetManufacturerResponse'
                   type: array
               type: object
         "500":
@@ -438,7 +559,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.CreateManufacturerRequest'
+          $ref: '#/definitions/data.CreateManufacturerRequest'
       produces:
       - application/json
       responses:
@@ -502,7 +623,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.GetManufacturerResponse'
+                  $ref: '#/definitions/data.GetManufacturerResponse'
               type: object
         "400":
           description: Incorrect id path
@@ -529,7 +650,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.UpdateManufacturerRequest'
+          $ref: '#/definitions/data.UpdateManufacturerRequest'
       produces:
       - application/json
       responses:
@@ -591,7 +712,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.UpdateUserRequest'
+          $ref: '#/definitions/data.UpdateUserRequest'
       produces:
       - application/json
       responses:
@@ -627,7 +748,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.ChangePasswordRequest'
+          $ref: '#/definitions/data.ChangePasswordRequest'
       produces:
       - application/json
       responses:
@@ -666,7 +787,7 @@ paths:
             - $ref: '#/definitions/types.SuccessResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/models.GetUserResponse'
+                  $ref: '#/definitions/data.GetUserResponse'
               type: object
         "401":
           description: User is not logged in
@@ -689,7 +810,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.SendPasswordResetEmailRequest'
+          $ref: '#/definitions/data.SendPasswordResetEmailRequest'
       produces:
       - application/json
       responses:
@@ -747,7 +868,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.AccountVerificationRequest'
+          $ref: '#/definitions/data.AccountVerificationRequest'
       produces:
       - application/json
       responses:
@@ -784,7 +905,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.PasswordResetRequest'
+          $ref: '#/definitions/data.PasswordResetRequest'
       produces:
       - application/json
       responses:
